WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274386
[UnifiedPDF] Occasionally, PDF is stuck displaying low-res tiles when switching tabs in Safari
https://bugs.webkit.org/show_bug.cgi?id=274386
Summary
[UnifiedPDF] Occasionally, PDF is stuck displaying low-res tiles when switchi...
Abrar Rahman Protyasha
Reported
2024-05-20 04:23:19 PDT
rdar://127869064
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-05-20 04:34:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28785
EWS
Comment 2
2024-05-20 10:20:43 PDT
Committed
279001@main
(e6c01f07ff5b): <
https://commits.webkit.org/279001@main
> Reviewed commits have been landed. Closing PR #28785 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug