[UnifiedPDF] Occasionally, PDF is stuck displaying low-res tiles when switching tabs in Safari https://bugs.webkit.org/show_bug.cgi?id=274386 rdar://127869064

Reviewed by Tim Horton.

We drop high-res tiles due to background tile purging, but do not get
them back when switching back to a Safari tab displaying a PDF. Since
this only reproduces with asynchronous drawing enabled for the contents
layer, this patch disables asynchronous drawing for said layer. A more
"correct" fix is tracked by https://webkit.org/b/274387.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::ensureLayers):

Canonical link: https://commits.webkit.org/279001@main